k8s/agent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amicable-agent
spec:
  selector:
    app: amicable-agent
  ports:
    - name: http
      port: 80
      targetPort: 8000
